fix responsiveness on mobile

--- a/landing/pages/payment.css
+++ b/landing/pages/payment.css
@@ -10,13 +10,15 @@
     display: flex;
     justify-content: center;
     align-content: center;
-    /*height: 55vh;*/
-    width: 100vw;
+    align-items: center;
+    width:100%;
+    margin: 0 auto;
 }
 
 .stripe-form {
-    width: 30vw;
-    min-width: 500px;
+    /*margin: 0 auto;*/
+    width:30vw;
+    min-width: 350px;
     align-self: center;
     box-shadow: 0px 0px 0px 0.2px rgba(50, 50, 93, 0.1),
     0px 2px 3px 0px rgba(50, 50, 93, 0.1), 0px 1px 1px 0px rgba(0, 0, 0, 0.07);
